gl31-master/src/test/deca/context/valid/sansobjet/while_op2.deca
// Description:
//    Test while pour test context
//
// Resultats:
//    Succes : while écrit correctement
//
// Historique:
//    cree le 17/01/2021
{
    boolean b = true;
    boolean d = true;
    int i = 0;

    while(b && d){
        print("infini");
        while(i < 10){
            i = i + 1;
        }
        i = 0;
    }
}
