gl31-master/src/test/deca/context/invalid/sansobjet/float_boolean_operation.deca
// Description:
//    Opérations : entre un int et un boolean
//
// Resultats:
//    Erreur : Types incompatibles, opération interdite
//
// Historique:
//    cree le 13/01/2021

{
    int a;
    boolean b;
    int r;
    r = a + b;
}

